
noinst_LIBRARIES = libhtmleditor.a

INCLUDES =  \
    $(GNOME_INCLUDEDIR) \
	-I$(top_srcdir) \
	-I$(top_srcdir)/html \
        -I /usr/include/gtkhtml \
	$(EXTRA_GNOME_CFLAGS)

libhtmleditor_a_SOURCES = 	\
        gs_editor.c \
	gs_editor.h \
        body.c \
        body.h \
        control-data.c \
        control-data.h \
        dialog.c \
        dialog.h \
        image.c \
        image.h \
        link.c \
        link.h \
        paragraph.c \
        paragraph.h \
        popup.c \
        popup.h \
        properties.c \
        properties.h \
        replace.c \
        replace.h\
        rule.c \
        rule.h \
        search.c \
        search.h \
        text.c \
        text.h \
        toolbar.c \
        toolbar.h \
        utils.c \
        utils.h

