entities = \
	authors.xml	interface.xml	introduction.xml	journals.xml \
	legal.xml	license.xml	modules.xml		personal.xml \
	preferences.xml	search.xml	start.xml		onlinehelp.xml \
	studypad.xml    originallanguage.xml
	
figdir = figures
docname = xiphos-manual
lang = C
omffile = xiphos-manual-C.omf
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook
