INCLUDES = \
    $(GNOME_CFLAGS) \
    $(SWORD_INCLUDES) \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libbackend.a

libbackend_a_SOURCES =  \
    gs_markupfiltmgr.cpp gs_markupfiltmgr.h \
    gs_osishtmlhref.cpp gs_osishtmlhref.h \
    module_manager.cc module_manager.hh \
    sword.cpp sword.h\
    sword_main.cc sword_main.hh
